--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,47 +1,31 @@
-name: Deploy to GitHub Pages
-
 on:
-  push:
-    branches:
-      - main  # Adjust if your default branch is different (e.g., master)
-  workflow_dispatch:  # Allows manual triggering from GitHub UI
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
+  # Run this workflow whenever a new commit is pushed to main.
+  push: {branches: [master]}
+  # Run this workflow when triggered manually in GitHub’s UI.
+  workflow_dispatch: {}
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22'  # Matches your engines requirement (>=18)
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build project
-        run: npm run build  # Runs 'observable build' to generate dist/
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: dist/  # Your build output directory
-
   deploy:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
     steps:
-      - name: Deploy to GitHub Pages
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 22
+          cache: npm
+      - run: npm ci
+      - run: npm run build
+      - uses: actions/configure-pages@v4
+      - uses: actions/upload-pages-artifact@v3
+        with:
+          path: dist
+      - name: Deploy
         id: deployment
         uses: actions/deploy-pages@v4
